# AIOB

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.adoc  DONTREADME.adoc  README.adoc  README.html  README.md  cleanup.sh  db.json  mypy.ini  pyproject.toml  requirements.txt  settings.toml  tox.ini
.github/workflow/: test.yml
.github/workflows/: cov.yml  pypi-publish.yml  test.yml
src/aiob/: __main__.py
src/aiob/api/: bridge.py  config.py  db.py  model.py  opts.py  plugin_loader.py  settings.toml
src/aiob/api/Destinations/file_markdown/: dest_file_markdown.py  file_markdown.py
src/aiob/api/Sources/markdown/: markdown.py
src/aiob/api/Sources/src_file_markdown/: src_file_markdown.py
src/aiob/cli/: main.py
tests/: .gitignore  db.json  settings.toml
tests/api/: conftest.py  test_general.py  test_mdfsrc2mdfdest.py  test_model.py  test_plugin_loader.py  test_src2dest.py
tests/api/Destinations/: test_file_markdown.py
tests/api/Sources/: test_markdown.py
