[tool.poetry]
name = "aiob"
version = "0.0.1"
description = "All In One Blogger"
authors = ["clouder <clouder0@outlook.com>"]

[tool.poetry.scripts]
aiob = "aiob.cli.main:main"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
dynaconf = "^3.1.7"
aiofiles = "^0.8.0"
tinydb = "^4.7.0"
typer = {extras = ["all"], version = "^0.4.1"}
colorama = "^0.4.4"
shellingham = "^1.4.0"
python-frontmatter = "^1.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"
pydocstyle = "^6.1.1"
pycodestyle = "^2.8.0"
mypy = "^0.942"
types-aiofiles = "^0.8.8"
pytest-random-order = "^1.0.4"
tox = "^3.25.0"
flake8 = "^4.0.1"
pep8-naming = "^0.12.1"
flake8-isort = "^4.1.1"
pre-commit = "^2.18.1"
flake8-comprehensions = "^3.8.0"
flake8-bugbear = "^22.3.23"
flake8-quotes = "^3.3.1"
flake8-simplify = "^0.19.2"
flake8-use-fstring = "^1.3"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = "auto"
